--- a/clappr/src/main/res/values/dimens.xml
+++ b/clappr/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="media_control_bottom_margin">12dp</dimen>
     <dimen name="media_control_left_margin">16dp</dimen>
     <dimen name="media_control_right_margin">16dp</dimen>
+
+    <!-- Bottom panel button -->
+    <dimen name="bottom_panel_button_width">32dp</dimen>
+    <dimen name="bottom_panel_button_height">32dp</dimen>
+    <dimen name="bottom_panel_button_left_padding">8dp</dimen>
+    <dimen name="bottom_panel_button_right_padding">8dp</dimen>
+    <dimen name="bottom_panel_button_bottom_margin">-2dp</dimen>
+    <dimen name="bottom_panel_button_right_margin">16dp</dimen>
+    <dimen name="bottom_panel_button_vertical_padding">5dp</dimen>
 </resources>
